# webbapp-concepts

./: .replit  LICENSE  app.py  data_importer.py  database.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
client/: package-lock.json  package.json
client/client/: package-lock.json
client/components/: FunnelIcon.tsx  Layout.tsx  Navbar.tsx  Sidebar.tsx
client/pages/: _app.tsx  about.tsx  index.tsx
client/src/: App.js
client/styles/: globals.css
server/: README.md  main.py  pyproject.toml  server.py
server/website/: __init__.py  auth.py  data_importer.py  database.py  models.py  views.py
server/website/static/: index.js
server/website/templates/: banner.html  base.html  concepts.html  home.html  login.html  nav.html  notes.html  sign_up.html
templates/: home.html  nav.html
website/: __init__.py  app.py  auth.py  data_importer.py  database.py  models.py  views.py
website/static/: index.js
website/templates/: base.html  home.html  nav.html
