[tool.poetry]
name = "repl_nix_webbapp-concepts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
google-cloud-storage = "2.10.0"
mysql-connector-python = "8.0.33"
xds-protos = "^0.0.11"
SQLAlchemy = "2.0.18"
pymysql = "1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
