[tool.poetry]
name = "repl_nix_webbapp-concepts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
google-cloud-storage = "2.10.0"
mysql-connector-python = "8.0.33"
xds-protos = "^0.0.11"
SQLAlchemy = "2.0.18"
pymysql = "1.1.0"
pandas = "2.0.3"
Flask-Login = "0.6.2"
Flask-Script = "2.0.6"
Flask-SQLAlchemy = "^3.0.5"
python-dotenv = "^1.0.0"
flask-cors = "^4.0.0"
flask-socketio = "^5.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
